# click-castor

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile.in  README.md  build-castor-android-armv7-a.sh  build-castor-android-armv8-a.sh  build-castor-android.sh  build-castor-native.sh  build-castor-ns3.sh  config-android.h.in  config.h.in  configure  configure.in  patch-libsodium-maketoolchain-force.diff  patch-libsodium-no-devrandom-block.diff  start-node.sh
android/: .gitignore  Makefile.in  android-armv7-a.sh  android-armv8-a.sh  android-build.sh  click.cc
apps/castor/: Makefile  castor_socket.hh
apps/castor/ping/: .gitignore  Makefile  cli.cc  cli.hh  ping.cc  ping.hh  ping_test.cc
apps/castor/status/: .gitignore  Makefile  castor_status.cc
apps/castor/traceroute/: .gitignore  Makefile  README.txt  cli.cc  cli.hh  route.cc  route.hh  route_entry.cc  route_entry.hh  template_output  traceroute.cc  traceroute.hh  traceroute_test.cc
apps/csclient/: .gitignore  Makefile  csclient.cc  csclient.hh  csclient_test  csclient_test.cc  test.click
conf/castor/: castor_common.click  castor_init_blocks.click  castor_init_common_blocks.click  castor_io.click  castor_io_benchmark.click  castor_io_ns3.click  castor_io_userlevel.click  castor_multicast_via_unicast_routing.click  castor_multicast_via_unicast_routing_v2.click  castor_routing.click  castor_routing_stripped2.click  castor_run_benchmark.click  castor_run_ns3.click  castor_run_userlevel.click  castor_settings.click  castor_socket.click  castor_unicast.click  castor_unicast_routing.click  castor_wiring.click  castor_xcast.click  castor_xcast_routing.click  castor_xcast_routing_promisc.click  flooding.click  make_myconfig.py  mycastorrouter.click  set_neigbor_filter.py
conf/castor/aodv/: aodv_core.click  aodv_linux_userlevel.click  aodv_ns3.click  aodv_userlevel.click  ext_aodv_userlevel.click  local.click
conf/castor/daniel/: castor_routing.click
doc/: testie.1
elements/aodv/: aodv_destinationclassifier.cc  aodv_generatererr.cc  aodv_generaterrep.cc  aodv_hellogenerator.cc  aodv_hellogenerator.hh  aodv_knownclassifier.cc  aodv_knownclassifier.hh  aodv_neighbours.cc  aodv_neighbours.hh  aodv_packetanalyzer.cc  aodv_trackneighbours.cc  aodv_updateneighbours.cc  aodv_waitingfordiscovery.cc  aodv_waitingfordiscovery.hh  ext_aodv_cptracker.cc  ext_aodv_cptracker.hh  ext_aodv_problemdetector.cc  ext_aodv_problemdetector.hh
elements/castor/: castor.hh  castor_anno.hh  group_id.hh  hash.hh  neighbor_id.hh  node_id.hh
elements/castor/attack/: add_replay_ack.cc  add_replay_ack.hh  add_replay_pkt.cc  add_replay_pkt.hh  replay_store.cc  replay_store.hh
elements/castor/crypto/: crypto.cc  crypto.hh  samanagement.cc  samanagement.hh  securityassociation.cc  securityassociation.hh
elements/castor/debug/: castor_annotate_debug_pid.cc  castor_annotate_debug_pid.hh  castor_create_debug_ack.cc  castor_create_debug_ack.hh  castor_debug_authenticate_ack.cc  castor_debug_authenticate_ack.hh  castor_debug_handler.cc  castor_debug_handler.hh  castor_debug_no_loopback.cc.outdated  castor_debug_no_loopback.hh.outdated  castor_debug_print.cc  castor_debug_print.hh  castor_dec_ttl.cc  castor_dec_ttl.hh  castor_insert_path.cc  castor_insert_path.hh  castor_is_aret.cc  castor_is_aret.hh  castor_is_dbg.cc  castor_is_dbg.hh  castor_is_insp.cc  castor_is_insp.hh
elements/castor/flooding/: flooding_blackhole_filter.cc  flooding_blackhole_filter.hh  flooding_destination_classifier.cc  flooding_destination_classifier.hh  flooding_record_pkt.cc  flooding_record_pkt.hh  flooding_set_pkt_id.cc  flooding_set_pkt_id.hh
elements/castor/flow/: bitset.hh  castor_add_flow_authenticator.cc  castor_add_flow_authenticator.hh  castor_authenticate_flow.cc  castor_authenticate_flow.hh  castor_flow.hh  castor_flow_entry.cc  castor_flow_entry.hh  castor_flow_manager.cc  castor_flow_manager.hh  castor_flow_table.cc  castor_flow_table.hh  castor_has_complete_flow.cc  castor_has_complete_flow.hh  castor_is_arq.cc  castor_merkle_flow.cc  castor_merkle_flow.hh  castor_reconstruct_flow.cc  castor_reconstruct_flow.hh  castor_set_arq.cc  castor_strip_flow_authenticator.cc  castor_strip_flow_authenticator.hh  merkle_tree.cc  merkle_tree.hh
elements/castor/neighbors/: add_forwarder_list.cc  add_forwarder_list.hh  add_neighbor.cc  add_neighbor.hh  forwarder_filter.cc  forwarder_filter.hh  forwarder_list.hh  neighbor_auth_add_icv.cc  neighbor_auth_add_icv.hh  neighbor_auth_check_icv.cc  neighbor_auth_check_icv.hh  neighbor_auth_strip_icv.cc  neighbor_auth_strip_icv.hh  neighbor_beacon_generator.cc  neighbor_beacon_generator.hh  neighbor_filter.cc  neighbor_filter.hh  neighbors.cc  neighbors.hh  remove_forwarder_list.cc  remove_forwarder_list.hh
elements/castor/ratelimiter/: castor_rate_limit.cc  castor_rate_limit.hh  castor_rate_limit_table.cc  castor_rate_limit_table.hh  castor_rate_limiter.cc  castor_rate_limiter.hh  castor_update_rate_limit.cc  castor_update_rate_limit.hh  ring_buffer.hh
elements/castor/routing/: castor_add_ack_tohistory.cc  castor_add_ack_tohistory.hh  castor_add_header.cc  castor_add_header.hh  castor_add_pkt_tohistory.cc  castor_add_pkt_tohistory.hh  castor_annotate_id.cc  castor_annotate_id.hh  castor_annotate_pid.cc  castor_annotate_pid.hh  castor_authenticate_ack.cc  castor_authenticate_ack.hh  castor_calc_icv.cc  castor_calc_icv.hh  castor_check_duplicate.cc  castor_check_duplicate.hh  castor_check_icv.cc  castor_check_icv.hh  castor_continuous_flow_map.cc  (+44 more)
elements/local/: jitterunqueue.cc  jitterunqueue.hh  setipsrc.cc
elements/ns/: fromsimdevice.cc
elements/userlevel/: ipflowrawsockets.cc  ipflowrawsockets.hh
experiments/: nodeinfo.sh  nodes.hosts  start-ad-hoc.sh  start-all-click.sh  start-click.sh
include/botan/: build.h
include/click/: config-android.h  glue.hh
lib/: packet.cc  userutils.cc
ns-3/: experiments.py  plot.gnu  plot_distribution.gnu  plot_interval.gnu  plot_interval_bu.gnu  postprocess-animation.sh
ns-3/scratch/: castor-xcast.cc  castor.cc
userlevel/: Makefile.android
userlevel/lib/: libsodium.la
(+307 files in other folders)
