### DO NOT ATTEMPT TO COMPILE USING THIS FILE
### THIS IS JUST INCLUDED TO SUPPORT
### CODE NAVIGATION IN JetBrain's CLion

cmake_minimum_required(VERSION 3.6)
project(click_castor)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    apps/castor/ping/cli.cc
    apps/castor/ping/cli.hh
    apps/castor/ping/ping.cc
    apps/castor/ping/ping.hh
    apps/castor/ping/ping_test.cc
    apps/castor/status/castor_status.cc
    apps/castor/traceroute/cli.cc
    apps/castor/traceroute/cli.hh
    apps/castor/traceroute/route.cc
    apps/castor/traceroute/route.hh
    apps/castor/traceroute/route_entry.cc
    apps/castor/traceroute/route_entry.hh
    apps/castor/traceroute/traceroute.cc
    apps/castor/traceroute/traceroute.hh
    apps/castor/traceroute/traceroute_test.cc
    apps/castor/castor_socket.hh
    apps/csclient/csclient.cc
    apps/csclient/csclient.hh
    apps/csclient/csclient_test
    apps/csclient/csclient_test.cc
    apps/csclient/Makefile
    apps/csclient/test.click
    elements/analysis/adjusttimestamp.cc
    elements/analysis/adjusttimestamp.hh
    elements/analysis/aggcounter.cc
    elements/analysis/aggcounter.hh
    elements/analysis/aggpktcounter.cc
    elements/analysis/aggpktcounter.hh
    elements/analysis/aggregatefilter.cc
    elements/analysis/aggregatefilter.hh
    elements/analysis/aggregatefirst.cc
    elements/analysis/aggregatefirst.hh
    elements/analysis/aggregateip.cc
    elements/analysis/aggregateip.hh
    elements/analysis/aggregateipaddrpair.cc
    elements/analysis/aggregateipaddrpair.hh
    elements/analysis/aggregateipflows.cc
    elements/analysis/aggregateipflows.hh
    elements/analysis/aggregatelast.cc
    elements/analysis/aggregatelast.hh
    elements/analysis/aggregatelen.cc
    elements/analysis/aggregatelen.hh
    elements/analysis/aggregatenotifier.cc
    elements/analysis/aggregatenotifier.hh
    elements/analysis/aggregatepaint.cc
    elements/analysis/aggregatepaint.hh
    elements/analysis/anonipaddr.cc
    elements/analysis/anonipaddr.hh
    elements/analysis/eraseippayload.cc
    elements/analysis/eraseippayload.hh
    elements/analysis/fromcapdump.cc
    elements/analysis/fromcapdump.hh
    elements/analysis/fromdagdump.cc
    elements/analysis/fromdagdump.hh
    elements/analysis/fromflandump.cc
    elements/analysis/fromflandump.hh
    elements/analysis/fromipsumdump.cc
    elements/analysis/fromipsumdump.hh
    elements/analysis/fromnetflowsumdump.cc
    elements/analysis/fromnetflowsumdump.hh
    elements/analysis/fromnlanrdump.cc
    elements/analysis/fromnlanrdump.hh
    elements/analysis/fromtcpdump.cc
    elements/analysis/fromtcpdump.hh
    elements/analysis/ipsumdump_anno.cc
    elements/analysis/ipsumdump_anno.hh
    elements/analysis/ipsumdump_icmp.cc
    elements/analysis/ipsumdump_icmp.hh
    elements/analysis/ipsumdump_ip.cc
    elements/analysis/ipsumdump_ip.hh
    elements/analysis/ipsumdump_link.cc
    elements/analysis/ipsumdump_link.hh
    elements/analysis/ipsumdump_payload.cc
    elements/analysis/ipsumdump_payload.hh
    elements/analysis/ipsumdump_tcp.cc
    elements/analysis/ipsumdump_tcp.hh
    elements/analysis/ipsumdump_udp.cc
    elements/analysis/ipsumdump_udp.hh
    elements/analysis/ipsumdumpinfo.cc
    elements/analysis/ipsumdumpinfo.hh
    elements/analysis/settimestampdelta.cc
    elements/analysis/settimestampdelta.hh
    elements/analysis/storetimestamp.cc
    elements/analysis/storetimestamp.hh
    elements/analysis/storeudptimeseqrecord.cc
    elements/analysis/storeudptimeseqrecord.hh
    elements/analysis/timefilter.cc
    elements/analysis/timefilter.hh
    elements/analysis/timerange.cc
    elements/analysis/timerange.hh
    elements/analysis/timesortedsched.cc
    elements/analysis/timesortedsched.hh
    elements/analysis/timestampaccum.cc
    elements/analysis/timestampaccum.hh
    elements/analysis/toipflowdumps.cc
    elements/analysis/toipflowdumps.hh
    elements/analysis/toipsumdump.cc
    elements/analysis/toipsumdump.hh
    elements/app/ftpportmapper.cc
    elements/app/ftpportmapper.hh
    elements/aqm/adaptivered.cc
    elements/aqm/adaptivered.hh
    elements/aqm/codel.cc
    elements/aqm/codel.hh
    elements/aqm/pi.cc
    elements/aqm/pi.hh
    elements/aqm/red.cc
    elements/aqm/red.hh
    elements/bsdmodule/anydevice.cc
    elements/bsdmodule/anydevice.hh
    elements/bsdmodule/fastudpsrc.cc
    elements/bsdmodule/fastudpsrc.hh
    elements/bsdmodule/fromdevice.cc
    elements/bsdmodule/fromdevice.hh
    elements/bsdmodule/fromhost.cc
    elements/bsdmodule/fromhost.hh
    elements/bsdmodule/todevice.cc
    elements/bsdmodule/todevice.hh
    elements/bsdmodule/tohost.cc
    elements/bsdmodule/tohost.hh
    elements/bsdmodule/tohostsniffers.cc
    elements/bsdmodule/tohostsniffers.hh
    elements/castor/attack/add_replay_ack.cc
    elements/castor/attack/add_replay_ack.hh
    elements/castor/attack/add_replay_pkt.cc
    elements/castor/attack/add_replay_pkt.hh
    elements/castor/attack/replay_store.cc
    elements/castor/attack/replay_store.hh
    elements/castor/crypto/crypto.cc
    elements/castor/crypto/crypto.hh
    elements/castor/crypto/samanagement.cc
    elements/castor/crypto/samanagement.hh
    elements/castor/crypto/securityassociation.cc
    elements/castor/crypto/securityassociation.hh
    elements/castor/debug/castor_annotate_debug_pid.cc
    elements/castor/debug/castor_annotate_debug_pid.hh
    elements/castor/debug/castor_create_debug_ack.cc
    elements/castor/debug/castor_create_debug_ack.hh
    elements/castor/debug/castor_debug_authenticate_ack.cc
    elements/castor/debug/castor_debug_authenticate_ack.hh
    elements/castor/debug/castor_debug_handler.cc
    elements/castor/debug/castor_debug_handler.hh
    elements/castor/debug/castor_debug_print.cc
    elements/castor/debug/castor_debug_print.hh
    elements/castor/debug/castor_dec_ttl.cc
    elements/castor/debug/castor_dec_ttl.hh
    elements/castor/debug/castor_insert_path.cc
    elements/castor/debug/castor_insert_path.hh
    elements/castor/debug/castor_is_aret.cc
    elements/castor/debug/castor_is_aret.hh
    elements/castor/debug/castor_is_dbg.cc
    elements/castor/debug/castor_is_dbg.hh
    elements/castor/debug/castor_is_insp.cc
    elements/castor/debug/castor_is_insp.hh
    elements/castor/flow/castor_add_flow_authenticator.cc
    elements/castor/flow/castor_add_flow_authenticator.hh
    elements/castor/flow/castor_authenticate_flow.cc
    elements/castor/flow/castor_authenticate_flow.hh
    elements/castor/flow/castor_flow_manager.cc
    elements/castor/flow/castor_flow_manager.hh
    elements/castor/flow/castor_flow_table.cc
    elements/castor/flow/castor_flow_table.hh
    elements/castor/flow/castor_flow_entry.cc
    elements/castor/flow/castor_flow_entry.hh
    elements/castor/flow/castor_has_complete_flow.cc
    elements/castor/flow/castor_has_complete_flow.hh
    elements/castor/flow/castor_merkle_flow.cc
    elements/castor/flow/castor_merkle_flow.hh
    elements/castor/flow/castor_reconstruct_flow.cc
    elements/castor/flow/castor_reconstruct_flow.hh
    elements/castor/flow/castor_strip_flow_authenticator.cc
    elements/castor/flow/castor_strip_flow_authenticator.hh
    elements/castor/flow/merkle_tree.cc
    elements/castor/flow/merkle_tree.hh
    elements/castor/neighbors/add_forwarder_list.cc
    elements/castor/neighbors/add_forwarder_list.hh
    elements/castor/neighbors/add_neighbor.cc
    elements/castor/neighbors/add_neighbor.hh
    elements/castor/neighbors/forwarder_filter.cc
    elements/castor/neighbors/forwarder_filter.hh
    elements/castor/neighbors/forwarder_list.hh
    elements/castor/neighbors/neighbor_auth_add_icv.cc
    elements/castor/neighbors/neighbor_auth_add_icv.hh
    elements/castor/neighbors/neighbor_auth_check_icv.cc
    elements/castor/neighbors/neighbor_auth_check_icv.hh
    elements/castor/neighbors/neighbor_auth_strip_icv.cc
    elements/castor/neighbors/neighbor_auth_strip_icv.hh
    elements/castor/neighbors/neighbor_beacon_generator.cc
    elements/castor/neighbors/neighbor_beacon_generator.hh
    elements/castor/neighbors/neighbors.cc
    elements/castor/neighbors/neighbors.hh
    elements/castor/neighbors/remove_forwarder_list.cc
    elements/castor/neighbors/remove_forwarder_list.hh
    elements/castor/ratelimiter/castor_rate_limit.cc
    elements/castor/ratelimiter/castor_rate_limit.hh
    elements/castor/ratelimiter/castor_rate_limit_table.cc
    elements/castor/ratelimiter/castor_rate_limit_table.hh
    elements/castor/ratelimiter/castor_rate_limiter.cc
    elements/castor/ratelimiter/castor_rate_limiter.hh
    elements/castor/ratelimiter/castor_update_rate_limit.cc
    elements/castor/ratelimiter/castor_update_rate_limit.hh
    elements/castor/ratelimiter/ring_buffer.hh
    elements/castor/routing/castor_add_ack_tohistory.cc
    elements/castor/routing/castor_add_ack_tohistory.hh
    elements/castor/routing/castor_add_header.cc
    elements/castor/routing/castor_add_header.hh
    elements/castor/routing/castor_add_pkt_tohistory.cc
    elements/castor/routing/castor_add_pkt_tohistory.hh
    elements/castor/routing/castor_annotate_id.cc
    elements/castor/routing/castor_annotate_id.hh
    elements/castor/routing/castor_annotate_pid.cc
    elements/castor/routing/castor_annotate_pid.hh
    elements/castor/routing/castor_authenticate_ack.cc
    elements/castor/routing/castor_authenticate_ack.hh
    elements/castor/routing/castor_calc_icv.cc
    elements/castor/routing/castor_calc_icv.hh
    elements/castor/routing/castor_check_duplicate.cc
    elements/castor/routing/castor_check_duplicate.hh
    elements/castor/routing/castor_check_icv.cc
    elements/castor/routing/castor_check_icv.hh
    elements/castor/routing/castor_create_ack.cc
    elements/castor/routing/castor_create_ack.hh
    elements/castor/routing/castor_dest_classifier.cc
    elements/castor/routing/castor_dest_classifier.hh
    elements/castor/routing/castor_estimator.hh
    elements/castor/routing/castor_history.cc
    elements/castor/routing/castor_history.hh
    elements/castor/routing/castor_is_sync.cc
    elements/castor/routing/castor_is_sync.hh
    elements/castor/routing/castor_lookup_route.cc
    elements/castor/routing/castor_lookup_route.hh
    elements/castor/routing/castor_mirror.cc
    elements/castor/routing/castor_mirror.hh
    elements/castor/routing/castor_no_loopback.cc
    elements/castor/routing/castor_no_loopback.hh
    elements/castor/routing/castor_remove_header.cc
    elements/castor/routing/castor_remove_header.hh
    elements/castor/routing/castor_retransmit_ack.cc
    elements/castor/routing/castor_retransmit_ack.hh
    elements/castor/routing/castor_route_selector.hh
    elements/castor/routing/castor_route_selector_original.cc
    elements/castor/routing/castor_route_selector_original.hh
    elements/castor/routing/castor_routing_table.cc
    elements/castor/routing/castor_routing_table.hh
    elements/castor/routing/castor_set_ack_nexthop.cc
    elements/castor/routing/castor_set_ack_nexthop.hh
    elements/castor/routing/castor_start_timer.cc
    elements/castor/routing/castor_start_timer.hh
    elements/castor/routing/castor_timeout.cc
    elements/castor/routing/castor_timeout.hh
    elements/castor/routing/castor_timeout_table.cc
    elements/castor/routing/castor_timeout_table.hh
    elements/castor/routing/castor_unicast_filter.cc
    elements/castor/routing/castor_unicast_filter.hh
    elements/castor/routing/castor_update_estimates.cc
    elements/castor/routing/castor_update_estimates.hh
    elements/castor/routing/castor_update_timeout.cc
    elements/castor/routing/castor_update_timeout.hh
    elements/castor/routing/exponential_moving_average.hh
    elements/castor/util/castor_print.cc
    elements/castor/util/castor_print.hh
    elements/castor/util/castor_record_pkt.cc
    elements/castor/util/castor_record_pkt.hh
    elements/castor/util/jitterunqueue.cc
    elements/castor/util/jitterunqueue.hh
    elements/castor/util/setipsrc.cc
    elements/castor/util/setipsrc.hh
    elements/castor/castor.hh
    elements/castor/castor_anno.hh
    elements/castor/group_id.hh
    elements/castor/hash.hh
    elements/castor/neighbor_id.hh
    elements/castor/node_id.hh
    elements/ethernet/arpfaker.cc
    elements/ethernet/arpfaker.hh
    elements/ethernet/arpprint.cc
    elements/ethernet/arpprint.hh
    elements/ethernet/arpquerier.cc
    elements/ethernet/arpquerier.hh
    elements/ethernet/arpresponder.cc
    elements/ethernet/arpresponder.hh
    elements/ethernet/arptable.cc
    elements/ethernet/arptable.hh
    elements/ethernet/checkarpheader.cc
    elements/ethernet/checkarpheader.hh
    elements/ethernet/ensureether.cc
    elements/ethernet/ensureether.hh
    elements/ethernet/etherencap.cc
    elements/ethernet/etherencap.hh
    elements/ethernet/ethermirror.cc
    elements/ethernet/ethermirror.hh
    elements/ethernet/etherpausesource.cc
    elements/ethernet/etherpausesource.hh
    elements/ethernet/etherrewrite.cc
    elements/ethernet/etherrewrite.hh
    elements/ethernet/ethervlanencap.cc
    elements/ethernet/ethervlanencap.hh
    elements/ethernet/getetheraddress.cc
    elements/ethernet/getetheraddress.hh
    elements/ethernet/hostetherfilter.cc
    elements/ethernet/hostetherfilter.hh
    elements/ethernet/ip6ndadvertiser.cc
    elements/ethernet/ip6ndadvertiser.hh
    elements/ethernet/ip6ndsolicitor.cc
    elements/ethernet/ip6ndsolicitor.hh
    elements/ethernet/setetheraddress.cc
    elements/ethernet/setetheraddress.hh
    elements/ethernet/setvlananno.cc
    elements/ethernet/setvlananno.hh
    elements/ethernet/storeetheraddress.cc
    elements/ethernet/storeetheraddress.hh
    elements/ethernet/stripethervlanheader.cc
    elements/ethernet/stripethervlanheader.hh
    elements/ethernet/vlandecap.cc
    elements/ethernet/vlandecap.hh
    elements/ethernet/vlanencap.cc
    elements/ethernet/vlanencap.hh
    elements/etherswitch/bridgemessage.cc
    elements/etherswitch/bridgemessage.hh
    elements/etherswitch/debugbridge.cc
    elements/etherswitch/debugbridge.hh
    elements/etherswitch/etherswitch.cc
    elements/etherswitch/etherswitch.hh
    elements/etherswitch/listenetherswitch.cc
    elements/etherswitch/listenetherswitch.hh
    elements/etherswitch/spantree.cc
    elements/etherswitch/spantree.hh
    elements/grid/ackresponder.cc
    elements/grid/ackresponder.hh
    elements/grid/ackresponder2.cc
    elements/grid/ackresponder2.hh
    elements/grid/ackretrysender.cc
    elements/grid/ackretrysender.hh
    elements/grid/ackretrysender2.cc
    elements/grid/ackretrysender2.hh
    elements/grid/airoinfo.cc
    elements/grid/airoinfo.hh
    elements/grid/amoeba.cc
    elements/grid/amoeba.hh
    elements/grid/bottleneckmetric.cc
    elements/grid/bottleneckmetric.hh
    elements/grid/checkgridheader.cc
    elements/grid/checkgridheader.hh
    elements/grid/delivery_rate_table.hh
    elements/grid/dsdvroutetable.cc
    elements/grid/dsdvroutetable.hh
    elements/grid/dsr.hh
    elements/grid/dsrarptable.cc
    elements/grid/dsrarptable.hh
    elements/grid/dsrroutetable.cc
    elements/grid/dsrroutetable.hh
    elements/grid/e2elossmetric.cc
    elements/grid/e2elossmetric.hh
    elements/grid/etx2metric.cc
    elements/grid/etx2metric.hh
    elements/grid/etxmetric.cc
    elements/grid/etxmetric.hh
    elements/grid/filterbyhops.cc
    elements/grid/filterbyhops.hh
    elements/grid/filterbyrange.cc
    elements/grid/filterbyrange.hh
    elements/grid/fixdstloc.cc
    elements/grid/fixdstloc.hh
    elements/grid/fixsrcloc.cc
    elements/grid/fixsrcloc.hh
    elements/grid/floodinglocquerier.cc
    elements/grid/floodinglocquerier.hh
    elements/grid/grid.hh
    elements/grid/gridencap.cc
    elements/grid/gridencap.hh
    elements/grid/gridgatewayinfo.cc
    elements/grid/gridgatewayinfo.hh
    elements/grid/gridgenericlocinfo.cc
    elements/grid/gridgenericlocinfo.hh
    elements/grid/gridgenericlogger.cc
    elements/grid/gridgenericlogger.hh
    elements/grid/gridgenericmetric.cc
    elements/grid/gridgenericmetric.hh
    elements/grid/gridgenericrt.hh
    elements/grid/gridheaderinfo.cc
    elements/grid/gridheaderinfo.hh
    elements/grid/gridlocationinfo.cc
    elements/grid/gridlocationinfo.hh
    elements/grid/gridlocationinfo2.cc
    elements/grid/gridlocationinfo2.hh
    elements/grid/gridlogger.cc
    elements/grid/gridlogger.hh
    elements/grid/gridprobehandler.cc
    elements/grid/gridprobehandler.hh
    elements/grid/gridprobereplyreceiver.cc
    elements/grid/gridprobereplyreceiver.hh
    elements/grid/gridprobesender.cc
    elements/grid/gridprobesender.hh
    elements/grid/gridproxy.cc
    elements/grid/gridproxy.hh
    elements/grid/gridroutecb.hh
    elements/grid/gridroutetable.cc
    elements/grid/gridroutetable.hh
    elements/grid/gridsrforwarder.cc
    elements/grid/gridsrforwarder.hh
    elements/grid/gridtxerror.cc
    elements/grid/gridtxerror.hh
    elements/grid/hello.cc
    elements/grid/hello.hh
    elements/grid/hopcountmetric.cc
    elements/grid/hopcountmetric.hh
    elements/grid/incseqno.cc
    elements/grid/incseqno.hh
    elements/grid/linkstat.cc
    elements/grid/linkstat.hh
    elements/grid/linktester.cc
    elements/grid/linktester.hh
    elements/grid/linktestreceiver.cc
    elements/grid/linktestreceiver.hh
    elements/grid/linktracker.cc
    elements/grid/linktracker.hh
    elements/grid/lirmetric.cc
    elements/grid/lirmetric.hh
    elements/grid/locfromfile.cc
    elements/grid/locfromfile.hh
    elements/grid/locqueryresponder.cc
    elements/grid/locqueryresponder.hh
    elements/grid/loctable.cc
    elements/grid/loctable.hh
    elements/grid/lookupgeogridroute.cc
    elements/grid/lookupgeogridroute.hh
    elements/grid/lookuplocalgridroute.cc
    elements/grid/lookuplocalgridroute.hh
    elements/grid/lookuplocalgridroute2.cc
    elements/grid/lookuplocalgridroute2.hh
    elements/grid/lrhello.cc
    elements/grid/lrhello.hh
    elements/grid/movesim.cc
    elements/grid/movesim.hh
    elements/grid/packetlogger.cc
    elements/grid/packetlogger.hh
    elements/grid/packetlogger2.cc
    elements/grid/packetlogger2.hh
    elements/grid/pep.cc
    elements/grid/pep.hh
    elements/grid/pep_proto.hh
    elements/grid/pingpong.cc
    elements/grid/pingpong.hh
    elements/grid/printgrid.cc
    elements/grid/printgrid.hh
    elements/grid/qvec.hh
    elements/grid/radiosim.cc
    elements/grid/radiosim.hh
    elements/grid/region.cc
    elements/grid/region.hh
    elements/grid/regionpep.cc
    elements/grid/regionpep.hh
    elements/grid/setgridchecksum.cc
    elements/grid/setgridchecksum.hh
    elements/grid/simplelocquerier.cc
    elements/grid/simplelocquerier.hh
    elements/grid/stripdsrheader.cc
    elements/grid/stripdsrheader.hh
    elements/grid/threshmetric.cc
    elements/grid/threshmetric.hh
    elements/grid/timeutils.hh
    elements/grid/unstripdsrheader.cc
    elements/grid/unstripdsrheader.hh
    elements/grid/updateroutes.cc
    elements/grid/updateroutes.hh
    elements/grid/yarvismetric.cc
    elements/grid/yarvismetric.hh
    elements/icmp/checkicmpheader.cc
    elements/icmp/checkicmpheader.hh
    elements/icmp/icmperror.cc
    elements/icmp/icmperror.hh
    elements/icmp/icmpipencap.cc
    elements/icmp/icmpipencap.hh
    elements/icmp/icmppingencap.cc
    elements/icmp/icmppingencap.hh
    elements/icmp/icmppingresponder.cc
    elements/icmp/icmppingresponder.hh
    elements/icmp/icmppingrewriter.cc
    elements/icmp/icmppingrewriter.hh
    elements/icmp/icmprewriter.cc
    elements/icmp/icmprewriter.hh
    elements/icmp/icmpsendpings.cc
    elements/icmp/icmpsendpings.hh
    elements/ip/checkipheader.cc
    elements/ip/checkipheader.hh
    elements/ip/checkipheader2.cc
    elements/ip/checkipheader2.hh
    elements/ip/decipttl.cc
    elements/ip/decipttl.hh
    elements/ip/directiplookup.cc
    elements/ip/directiplookup.hh
    elements/ip/fixipsrc.cc
    elements/ip/fixipsrc.hh
    elements/ip/getipaddress.cc
    elements/ip/getipaddress.hh
    elements/ip/ipaddrpairrewriter.cc
    elements/ip/ipaddrpairrewriter.hh
    elements/ip/ipaddrrewriter.cc
    elements/ip/ipaddrrewriter.hh
    elements/ip/ipclassifier.cc
    elements/ip/ipclassifier.hh
    elements/ip/ipencap.cc
    elements/ip/ipencap.hh
    elements/ip/ipfieldinfo.cc
    elements/ip/ipfieldinfo.hh
    elements/ip/ipfilter.cc
    elements/ip/ipfilter.hh
    elements/ip/ipfragmenter.cc
    elements/ip/ipfragmenter.hh
    elements/ip/ipgwoptions.cc
    elements/ip/ipgwoptions.hh
    elements/ip/ipinputcombo.cc
    elements/ip/ipinputcombo.hh
    elements/ip/ipmirror.cc
    elements/ip/ipmirror.hh
    elements/ip/ipnameinfo.cc
    elements/ip/ipnameinfo.hh
    elements/ip/ipoutputcombo.cc
    elements/ip/ipoutputcombo.hh
    elements/ip/ipprint.cc
    elements/ip/ipprint.hh
    elements/ip/ipratemon.cc
    elements/ip/ipratemon.hh
    elements/ip/ipreassembler.cc
    elements/ip/ipreassembler.hh
    elements/ip/iprewriterbase.cc
    elements/ip/iprewriterbase.hh
    elements/ip/iproutetable.cc
    elements/ip/iproutetable.hh
    elements/ip/iprwmapping.cc
    elements/ip/iprwmapping.hh
    elements/ip/iprwpattern.cc
    elements/ip/iprwpattern.hh
    elements/ip/iprwpatterns.cc
    elements/ip/iprwpatterns.hh
    elements/ip/lineariplookup.cc
    elements/ip/lineariplookup.hh
    elements/ip/lookupiproute.cc
    elements/ip/lookupiproute.hh
    elements/ip/lookupiproutelinux.cc
    elements/ip/lookupiproutelinux.hh
    elements/ip/lookupiproutemp.cc
    elements/ip/lookupiproutemp.hh
    elements/ip/markipce.cc
    elements/ip/markipce.hh
    elements/ip/markipheader.cc
    elements/ip/markipheader.hh
    elements/ip/radixiplookup.cc
    elements/ip/radixiplookup.hh
    elements/ip/rangeiplookup.cc
    elements/ip/rangeiplookup.hh
    elements/ip/rfc2507c.cc
    elements/ip/rfc2507c.hh
    elements/ip/rfc2507d.cc
    elements/ip/rfc2507d.hh
    elements/ip/ripsend.cc
    elements/ip/ripsend.hh
    elements/ip/rripmapper.cc
    elements/ip/rripmapper.hh
    elements/ip/setipaddress.cc
    elements/ip/setipaddress.hh
    elements/ip/setipchecksum.cc
    elements/ip/setipchecksum.hh
    elements/ip/setipdscp.cc
    elements/ip/setipdscp.hh
    elements/ip/setipecn.cc
    elements/ip/setipecn.hh
    elements/ip/setrandipaddress.cc
    elements/ip/setrandipaddress.hh
    elements/ip/siphmapper.cc
    elements/ip/siphmapper.hh
    elements/ip/sortediplookup.cc
    elements/ip/sortediplookup.hh
    elements/ip/storeipaddress.cc
    elements/ip/storeipaddress.hh
    elements/ip/stripipheader.cc
    elements/ip/stripipheader.hh
    elements/ip/truncateippayload.cc
    elements/ip/truncateippayload.hh
    elements/ip/unstripipheader.cc
    elements/ip/unstripipheader.hh
    elements/ip6/addresstranslator.cc
    elements/ip6/addresstranslator.hh
    elements/ip6/checkip6header.cc
    elements/ip6/checkip6header.hh
    elements/ip6/decip6hlim.cc
    elements/ip6/decip6hlim.hh
    elements/ip6/getip6address.cc
    elements/ip6/getip6address.hh
    elements/ip6/icmp6error.cc
    elements/ip6/icmp6error.hh
    elements/ip6/ip6encap.cc
    elements/ip6/ip6encap.hh
    elements/ip6/ip6fragmenter.cc
    elements/ip6/ip6fragmenter.hh
    elements/ip6/ip6mirror.cc
    elements/ip6/ip6mirror.hh
    elements/ip6/ip6print.cc
    elements/ip6/ip6print.hh
    elements/ip6/ip6routetable.cc
    elements/ip6/ip6routetable.hh
    elements/ip6/lookupip6route.cc
    elements/ip6/lookupip6route.hh
    elements/ip6/markip6header.cc
    elements/ip6/markip6header.hh
    elements/ip6/protocoltranslator46.cc
    elements/ip6/protocoltranslator46.hh
    elements/ip6/protocoltranslator64.cc
    elements/ip6/protocoltranslator64.hh
    elements/ip6/setip6address.cc
    elements/ip6/setip6address.hh
    elements/ip6/setip6dscp.cc
    elements/ip6/setip6dscp.hh
    elements/ipsec/aes.cc
    elements/ipsec/aes.hh
    elements/ipsec/des.cc
    elements/ipsec/des.hh
    elements/ipsec/desp.cc
    elements/ipsec/desp.hh
    elements/ipsec/esp.cc
    elements/ipsec/esp.hh
    elements/ipsec/hmac.cc
    elements/ipsec/hmac.hh
    elements/ipsec/hmacsha1.cc
    elements/ipsec/hmacsha1.hh
    elements/ipsec/ipsecencap.cc
    elements/ipsec/ipsecencap.hh
    elements/ipsec/ipsecroutetable.cc
    elements/ipsec/ipsecroutetable.hh
    elements/ipsec/radixipseclookup.cc
    elements/ipsec/radixipseclookup.hh
    elements/ipsec/sadatatuple.hh
    elements/ipsec/satable.cc
    elements/ipsec/satable.hh
    elements/ipsec/sha1.cc
    elements/ipsec/sha1.hh
    elements/ipsec/sha1_impl.cc
    elements/ipsec/sha1_impl.hh
    elements/json/json.cc
    elements/json/json.hh
    elements/linuxmodule/anydevice.cc
    elements/linuxmodule/anydevice.hh
    elements/linuxmodule/cpuqueue.cc
    elements/linuxmodule/cpuqueue.hh
    elements/linuxmodule/cpuswitch.cc
    elements/linuxmodule/cpuswitch.hh
    elements/linuxmodule/cyclecountaccum.cc
    elements/linuxmodule/cyclecountaccum.hh
    elements/linuxmodule/fastudpsrc.cc
    elements/linuxmodule/fastudpsrc.hh
    elements/linuxmodule/fromdevice.cc
    elements/linuxmodule/fromdevice.hh
    elements/linuxmodule/fromhost.cc
    elements/linuxmodule/fromhost.hh
    elements/linuxmodule/fromuserdevice.cc
    elements/linuxmodule/fromuserdevice.hh
    elements/linuxmodule/perfcountaccum.cc
    elements/linuxmodule/perfcountaccum.hh
    elements/linuxmodule/perfcountinfo.cc
    elements/linuxmodule/perfcountinfo.hh
    elements/linuxmodule/perfcountuser.cc
    elements/linuxmodule/perfcountuser.hh
    elements/linuxmodule/polldevice.cc
    elements/linuxmodule/polldevice.hh
    elements/linuxmodule/rtcycles.cc
    elements/linuxmodule/rtcycles.hh
    elements/linuxmodule/schedulelinux.cc
    elements/linuxmodule/schedulelinux.hh
    elements/linuxmodule/setcyclecount.cc
    elements/linuxmodule/setcyclecount.hh
    elements/linuxmodule/setperfcount.cc
    elements/linuxmodule/setperfcount.hh
    elements/linuxmodule/threadmonitor.cc
    elements/linuxmodule/threadmonitor.hh
    elements/linuxmodule/todevice.cc
    elements/linuxmodule/todevice.hh
    elements/linuxmodule/tohost.cc
    elements/linuxmodule/tohost.hh
    elements/linuxmodule/tohostsniffers.cc
    elements/linuxmodule/tohostsniffers.hh
    elements/linuxmodule/touserdevice.cc
    elements/linuxmodule/touserdevice.hh
    elements/local/bufconv.cc
    elements/local/bufconv.hh
    elements/local/chuckcheck.cc
    elements/local/chuckcheck.hh
    elements/local/copyflowid.cc
    elements/local/copyflowid.hh
    elements/local/copytcpseq.cc
    elements/local/copytcpseq.hh
    elements/local/duppath.cc
    elements/local/duppath.hh
    elements/local/forceicmp.cc
    elements/local/forceicmp.hh
    elements/local/forceip.cc
    elements/local/forceip.hh
    elements/local/forcetcp.cc
    elements/local/forcetcp.hh
    elements/local/forceudp.cc
    elements/local/forceudp.hh
    elements/local/indextreesiplookup.cc
    elements/local/indextreesiplookup.hh
    elements/local/print80211.cc
    elements/local/print80211.hh
    elements/local/printairo.cc
    elements/local/printairo.hh
    elements/local/reframe.cc
    elements/local/reframe.hh
    elements/local/rrunqueue.cc
    elements/local/rrunqueue.hh
    elements/local/tcpack.cc
    elements/local/tcpack.hh
    elements/local/tcpbuffer.cc
    elements/local/tcpbuffer.hh
    elements/local/tcpconn.cc
    elements/local/tcpconn.hh
    elements/local/tcpdemux.cc
    elements/local/tcpdemux.hh
    elements/local/tcpreflector.cc
    elements/local/tcpreflector.hh
    elements/local/toytcp.cc
    elements/local/toytcp.hh
    elements/local/webgen.cc
    elements/local/webgen.hh
    elements/minios/fromdevice.cc
    elements/minios/fromdevice.hh
    elements/minios/todevice.cc
    elements/minios/todevice.hh
    elements/ns/fromsimdevice.cc
    elements/ns/fromsimdevice.hh
    elements/ns/simpacketanalyzer.cc
    elements/ns/simpacketanalyzer.hh
    elements/ns/tosimdevice.cc
    elements/ns/tosimdevice.hh
    elements/ns/tosimtrace.cc
    elements/ns/tosimtrace.hh
    elements/radio/b8b10.cc
    elements/radio/b8b10.hh
    elements/radio/bim-proto.hh
    elements/radio/bim.cc
    elements/radio/bim.hh
    elements/radio/checkpattern.cc
    elements/radio/checkpattern.hh
    elements/radio/scramble.cc
    elements/radio/scramble.hh
    elements/radio/sendpattern.cc
    elements/radio/sendpattern.hh
    elements/simple/simpleidle.cc
    elements/simple/simpleidle.hh
    elements/simple/simplepriosched.cc
    elements/simple/simplepriosched.hh
    elements/simple/simplepullswitch.cc
    elements/simple/simplepullswitch.hh
    elements/simple/simplerrsched.cc
    elements/simple/simplerrsched.hh
    elements/standard/addressinfo.cc
    elements/standard/align.cc
    elements/standard/align.hh
    elements/standard/alignmentinfo.cc
    elements/standard/annotationinfo.cc
    elements/standard/annotationinfo.hh
    elements/standard/averagecounter.cc
    elements/standard/averagecounter.hh
    elements/standard/bandwidthmeter.cc
    elements/standard/bandwidthmeter.hh
    elements/standard/bandwidthshaper.cc
    elements/standard/bandwidthshaper.hh
    elements/standard/block.cc
    elements/standard/block.hh
    elements/standard/burster.cc
    elements/standard/burster.hh
    elements/standard/bwratedsplitter.cc
    elements/standard/bwratedsplitter.hh
    elements/standard/bwratedunqueue.cc
    elements/standard/bwratedunqueue.hh
    elements/standard/bypass.cc
    elements/standard/bypass.hh
    elements/standard/checkcrc32.cc
    elements/standard/checkcrc32.hh
    elements/standard/checklength.cc
    elements/standard/checklength.hh
    elements/standard/checkpaint.cc
    elements/standard/checkpaint.hh
    elements/standard/classification.cc
    elements/standard/classification.hh
    elements/standard/classifier.cc
    elements/standard/classifier.hh
    elements/standard/clickyinfo.cc
    elements/standard/clickyinfo.hh
    elements/standard/clipboard.cc
    elements/standard/clipboard.hh
    elements/standard/compblock.cc
    elements/standard/compblock.hh
    elements/standard/counter.cc
    elements/standard/counter.hh
    elements/standard/cpuqueue.cc
    elements/standard/cpuqueue.hh
    elements/standard/cpuswitch.cc
    elements/standard/cpuswitch.hh
    elements/standard/delayshaper.cc
    elements/standard/delayshaper.hh
    elements/standard/delayunqueue.cc
    elements/standard/delayunqueue.hh
    elements/standard/devirtualizeinfo.cc
    elements/standard/devirtualizeinfo.hh
    elements/standard/discard.cc
    elements/standard/discard.hh
    elements/standard/discardnofree.cc
    elements/standard/discardnofree.hh
    elements/standard/drivermanager.cc
    elements/standard/drivermanager.hh
    elements/standard/dropbroadcasts.cc
    elements/standard/dropbroadcasts.hh
    elements/standard/drr.cc
    elements/standard/drr.hh
    elements/standard/errorelement.cc
    elements/standard/flowinfo.cc
    elements/standard/flowinfo.hh
    elements/standard/frontdropqueue.cc
    elements/standard/frontdropqueue.hh
    elements/standard/fullnotequeue.cc
    elements/standard/fullnotequeue.hh
    elements/standard/hashswitch.cc
    elements/standard/hashswitch.hh
    elements/standard/hub.cc
    elements/standard/hub.hh
    elements/standard/idle.cc
    elements/standard/idle.hh
    elements/standard/infinitesource.cc
    elements/standard/infinitesource.hh
    elements/standard/inputswitch.cc
    elements/standard/inputswitch.hh
    elements/standard/linkunqueue.cc
    elements/standard/linkunqueue.hh
    elements/standard/markmacheader.cc
    elements/standard/markmacheader.hh
    elements/standard/messageelement.cc
    elements/standard/messageelement.hh
    elements/standard/meter.cc
    elements/standard/meter.hh
    elements/standard/mixedqueue.cc
    elements/standard/mixedqueue.hh
    elements/standard/msqueue.cc
    elements/standard/msqueue.hh
    elements/standard/notifierqueue.cc
    elements/standard/notifierqueue.hh
    elements/standard/nullelement.cc
    elements/standard/nullelement.hh
    elements/standard/nulls.cc
    elements/standard/nulls.hh
    elements/standard/pad.cc
    elements/standard/pad.hh
    elements/standard/paint.cc
    elements/standard/paint.hh
    elements/standard/paintswitch.cc
    elements/standard/paintswitch.hh
    elements/standard/painttee.cc
    elements/standard/painttee.hh
    elements/standard/portinfo.cc
    elements/standard/print.cc
    elements/standard/print.hh
    elements/standard/priosched.cc
    elements/standard/priosched.hh
    elements/standard/pullswitch.cc
    elements/standard/pullswitch.hh
    elements/standard/quicknotequeue.cc
    elements/standard/quicknotequeue.hh
    elements/standard/quitwatcher.cc
    elements/standard/quitwatcher.hh
    elements/standard/randomerror.cc
    elements/standard/randomerror.hh
    elements/standard/randomsample.cc
    elements/standard/randomsample.hh
    elements/standard/randomsource.cc
    elements/standard/randomsource.hh
    elements/standard/randomswitch.cc
    elements/standard/randomswitch.hh
    elements/standard/ratedsource.cc
    elements/standard/ratedsource.hh
    elements/standard/ratedsplitter.cc
    elements/standard/ratedsplitter.hh
    elements/standard/ratedunqueue.cc
    elements/standard/ratedunqueue.hh
    elements/standard/resize.cc
    elements/standard/resize.hh
    elements/standard/rrsched.cc
    elements/standard/rrsched.hh
    elements/standard/rrswitch.cc
    elements/standard/rrswitch.hh
    elements/standard/scheduleinfo.cc
    elements/standard/script.cc
    elements/standard/script.hh
    elements/standard/setannobyte.cc
    elements/standard/setannobyte.hh
    elements/standard/setcrc32.cc
    elements/standard/setcrc32.hh
    elements/standard/setpackettype.cc
    elements/standard/setpackettype.hh
    elements/standard/settimestamp.cc
    elements/standard/settimestamp.hh
    elements/standard/shaper.cc
    elements/standard/shaper.hh
    elements/standard/simplequeue.cc
    elements/standard/simplequeue.hh
    elements/standard/staticpullswitch.cc
    elements/standard/staticpullswitch.hh
    elements/standard/staticswitch.cc
    elements/standard/staticswitch.hh
    elements/standard/storedata.cc
    elements/standard/storedata.hh
    elements/standard/stridesched.cc
    elements/standard/stridesched.hh
    elements/standard/strideswitch.cc
    elements/standard/strideswitch.hh
    elements/standard/strip.cc
    elements/standard/strip.hh
    elements/standard/striptonet.cc
    elements/standard/striptonet.hh
    elements/standard/suppressor.cc
    elements/standard/suppressor.hh
    elements/standard/switch.cc
    elements/standard/switch.hh
    elements/standard/tee.cc
    elements/standard/tee.hh
    elements/standard/threadsafequeue.cc
    elements/standard/threadsafequeue.hh
    elements/standard/timedsink.cc
    elements/standard/timedsink.hh
    elements/standard/timedsource.cc
    elements/standard/timedsource.hh
    elements/standard/timedunqueue.cc
    elements/standard/timedunqueue.hh
    elements/standard/truncate.cc
    elements/standard/truncate.hh
    elements/standard/unqueue.cc
    elements/standard/unqueue.hh
    elements/standard/unqueue2.cc
    elements/standard/unqueue2.hh
    elements/standard/unstrip.cc
    elements/standard/unstrip.hh
    elements/tcpudp/checktcpheader.cc
    elements/tcpudp/checktcpheader.hh
    elements/tcpudp/checkudpheader.cc
    elements/tcpudp/checkudpheader.hh
    elements/tcpudp/dynudpipencap.cc
    elements/tcpudp/dynudpipencap.hh
    elements/tcpudp/fasttcpflows.cc
    elements/tcpudp/fasttcpflows.hh
    elements/tcpudp/fastudpflows.cc
    elements/tcpudp/fastudpflows.hh
    elements/tcpudp/fastudpsrcip6.cc
    elements/tcpudp/fastudpsrcip6.hh
    elements/tcpudp/iprewriter.cc
    elements/tcpudp/iprewriter.hh
    elements/tcpudp/settcpchecksum.cc
    elements/tcpudp/settcpchecksum.hh
    elements/tcpudp/setudpchecksum.cc
    elements/tcpudp/setudpchecksum.hh
    elements/tcpudp/snooptcp.cc
    elements/tcpudp/snooptcp.hh
    elements/tcpudp/statelesstcpresp.cc
    elements/tcpudp/statelesstcpresp.hh
    elements/tcpudp/tcpfragmenter.cc
    elements/tcpudp/tcpfragmenter.hh
    elements/tcpudp/tcpipsend.cc
    elements/tcpudp/tcpipsend.hh
    elements/tcpudp/tcprewriter.cc
    elements/tcpudp/tcprewriter.hh
    elements/tcpudp/udpip6encap.cc
    elements/tcpudp/udpip6encap.hh
    elements/tcpudp/udpipencap.cc
    elements/tcpudp/udpipencap.hh
    elements/tcpudp/udprewriter.cc
    elements/tcpudp/udprewriter.hh
    elements/test/bhmtest.cc
    elements/test/bhmtest.hh
    elements/test/biginttest.cc
    elements/test/biginttest.hh
    elements/test/bitvectortest.cc
    elements/test/bitvectortest.hh
    elements/test/blockthread.cc
    elements/test/blockthread.hh
    elements/test/checkpacket.cc
    elements/test/checkpacket.hh
    elements/test/clptest.cc
    elements/test/clptest.hh
    elements/test/comparepackets.cc
    elements/test/comparepackets.hh
    elements/test/confparsetest.cc
    elements/test/confparsetest.hh
    elements/test/cryptotest.cc
    elements/test/cryptotest.hh
    elements/test/dequetest.cc
    elements/test/dequetest.hh
    elements/test/errortest.cc
    elements/test/errortest.hh
    elements/test/functiontest.cc
    elements/test/functiontest.hh
    elements/test/handlertask.cc
    elements/test/handlertask.hh
    elements/test/hashtabletest.cc
    elements/test/hashtabletest.hh
    elements/test/heaptest.cc
    elements/test/heaptest.hh
    elements/test/jsontest.cc
    elements/test/jsontest.hh
    elements/test/listtest.cc
    elements/test/listtest.hh
    elements/test/neighborhoodtest.cc
    elements/test/neighborhoodtest.hh
    elements/test/notifierdebug.cc
    elements/test/notifierdebug.hh
    elements/test/notifiertest.cc
    elements/test/notifiertest.hh
    elements/test/nulltask.cc
    elements/test/nulltask.hh
    elements/test/packettest.cc
    elements/test/packettest.hh
    elements/test/queuethreadtest.cc
    elements/test/queuethreadtest.hh
    elements/test/queueyanktest.cc
    elements/test/queueyanktest.hh
    elements/test/randomseed.cc
    elements/test/randomseed.hh
    elements/test/schedordertest.cc
    elements/test/schedordertest.hh
    elements/test/sorttest.cc
    elements/test/sorttest.hh
    elements/test/taskthreadtest.cc
    elements/test/taskthreadtest.hh
    elements/test/timertest.cc
    elements/test/timertest.hh
    elements/test/tokenbuckettest.cc
    elements/test/tokenbuckettest.hh
    elements/test/upstreamnotifier.cc
    elements/test/upstreamnotifier.hh
    elements/test/vectortest.cc
    elements/test/vectortest.hh
    elements/threads/balancedthreadsched.cc
    elements/threads/balancedthreadsched.hh
    elements/threads/spinlockacquire.cc
    elements/threads/spinlockacquire.hh
    elements/threads/spinlockinfo.cc
    elements/threads/spinlockinfo.hh
    elements/threads/spinlockpush.cc
    elements/threads/spinlockpush.hh
    elements/threads/spinlockrelease.cc
    elements/threads/spinlockrelease.hh
    elements/threads/staticthreadsched.cc
    elements/threads/staticthreadsched.hh
    elements/userlevel/changeuid.cc
    elements/userlevel/changeuid.hh
    elements/userlevel/chattersocket.cc
    elements/userlevel/chattersocket.hh
    elements/userlevel/controlsocket.cc
    elements/userlevel/controlsocket.hh
    elements/userlevel/dpdkinfo.cc
    elements/userlevel/dpdkinfo.hh
    elements/userlevel/ensuredpdkbuffer.cc
    elements/userlevel/ensuredpdkbuffer.hh
    elements/userlevel/fakepcap.cc
    elements/userlevel/fakepcap.hh
    elements/userlevel/fastudpsrc.cc
    elements/userlevel/fastudpsrc.hh
    elements/userlevel/fromdevice.cc
    elements/userlevel/fromdevice.hh
    elements/userlevel/fromdpdkdevice.cc
    elements/userlevel/fromdpdkdevice.hh
    elements/userlevel/fromdump.cc
    elements/userlevel/fromdump.hh
    elements/userlevel/fromhost.cc
    elements/userlevel/fromhost.hh
    elements/userlevel/fromrawsocket.cc
    elements/userlevel/fromrawsocket.hh
    elements/userlevel/fromsocket.cc
    elements/userlevel/fromsocket.hh
    elements/userlevel/handlerproxy.cc
    elements/userlevel/handlerproxy.hh
    elements/userlevel/ipflowrawsockets.cc
    elements/userlevel/ipflowrawsockets.hh
    elements/userlevel/kernelfilter.cc
    elements/userlevel/kernelfilter.hh
    elements/userlevel/kerneltap.cc
    elements/userlevel/kerneltap.hh
    elements/userlevel/kerneltun.cc
    elements/userlevel/kerneltun.hh
    elements/userlevel/khandlerproxy.cc
    elements/userlevel/khandlerproxy.hh
    elements/userlevel/mcastsocket.cc
    elements/userlevel/mcastsocket.hh
    elements/userlevel/netmapinfo.cc
    elements/userlevel/netmapinfo.hh
    elements/userlevel/printold.cc
    elements/userlevel/printold.hh
    elements/userlevel/progressbar.cc
    elements/userlevel/progressbar.hh
    elements/userlevel/rawsocket.cc
    elements/userlevel/rawsocket.hh
    elements/userlevel/socket.cc
    elements/userlevel/socket.hh
    elements/userlevel/todevice.cc
    elements/userlevel/todevice.hh
    elements/userlevel/todpdkdevice.cc
    elements/userlevel/todpdkdevice.hh
    elements/userlevel/todump.cc
    elements/userlevel/todump.hh
    elements/userlevel/tohost.cc
    elements/userlevel/tohost.hh
    elements/userlevel/torawsocket.cc
    elements/userlevel/torawsocket.hh
    elements/userlevel/tosocket.cc
    elements/userlevel/tosocket.hh
    elements/userlevel/umlswitch.cc
    elements/userlevel/umlswitch.hh
    elements/wifi/ap/associationresponder.cc
    elements/wifi/ap/associationresponder.hh
    elements/wifi/ap/beaconsource.cc
    elements/wifi/ap/beaconsource.hh
    elements/wifi/ap/openauthresponder.cc
    elements/wifi/ap/openauthresponder.hh
    elements/wifi/ap/proberesponder.cc
    elements/wifi/ap/proberesponder.hh
    elements/wifi/ap/stationtable.cc
    elements/wifi/ap/stationtable.hh
    elements/wifi/station/associationrequester.cc
    elements/wifi/station/associationrequester.hh
    elements/wifi/station/beaconscanner.cc
    elements/wifi/station/beaconscanner.hh
    elements/wifi/station/beacontracker.cc
    elements/wifi/station/beacontracker.hh
    elements/wifi/station/openauthrequester.cc
    elements/wifi/station/openauthrequester.hh
    elements/wifi/station/proberequester.cc
    elements/wifi/station/proberequester.hh
    elements/wifi/athdesc.h
    elements/wifi/athdescdecap.cc
    elements/wifi/athdescdecap.hh
    elements/wifi/athdescencap.cc
    elements/wifi/athdescencap.hh
    elements/wifi/autoratefallback.cc
    elements/wifi/autoratefallback.hh
    elements/wifi/availablerates.cc
    elements/wifi/availablerates.hh
    elements/wifi/bitrate.cc
    elements/wifi/bitrate.hh
    elements/wifi/ethercount.cc
    elements/wifi/ethercount.hh
    elements/wifi/extradecap.cc
    elements/wifi/extradecap.hh
    elements/wifi/extraencap.cc
    elements/wifi/extraencap.hh
    elements/wifi/filterfailures.cc
    elements/wifi/filterfailures.hh
    elements/wifi/filterphyerr.cc
    elements/wifi/filterphyerr.hh
    elements/wifi/filtertx.cc
    elements/wifi/filtertx.hh
    elements/wifi/fromhandler.cc
    elements/wifi/fromhandler.hh
    elements/wifi/linktable.cc
    elements/wifi/linktable.hh
    elements/wifi/madwifirate.cc
    elements/wifi/madwifirate.hh
    elements/wifi/packetstore.cc
    elements/wifi/packetstore.hh
    elements/wifi/path.hh
    elements/wifi/printtxfeedback.cc
    elements/wifi/printtxfeedback.hh
    elements/wifi/printwifi.cc
    elements/wifi/printwifi.hh
    elements/wifi/prism2decap.cc
    elements/wifi/prism2decap.hh
    elements/wifi/prism2encap.cc
    elements/wifi/prism2encap.hh
    elements/wifi/probetxrate.cc
    elements/wifi/probetxrate.hh
    elements/wifi/pushanno.cc
    elements/wifi/pushanno.hh
    elements/wifi/radiotapdecap.cc
    elements/wifi/radiotapdecap.hh
    elements/wifi/radiotapencap.cc
    elements/wifi/radiotapencap.hh
    elements/wifi/rc4.cc
    elements/wifi/rc4.hh
    elements/wifi/readanno.cc
    elements/wifi/readanno.hh
    elements/wifi/rxstats.cc
    elements/wifi/rxstats.hh
    elements/wifi/setnoack.cc
    elements/wifi/setnoack.hh
    elements/wifi/setrts.cc
    elements/wifi/setrts.hh
    elements/wifi/settxpower.cc
    elements/wifi/settxpower.hh
    elements/wifi/settxrate.cc
    elements/wifi/settxrate.hh
    elements/wifi/wepdecap.cc
    elements/wifi/wepdecap.hh
    elements/wifi/wepencap.cc
    elements/wifi/wepencap.hh
    elements/wifi/wifidecap.cc
    elements/wifi/wifidecap.hh
    elements/wifi/wifidefrag.cc
    elements/wifi/wifidefrag.hh
    elements/wifi/wifidupefilter.cc
    elements/wifi/wifidupefilter.hh
    elements/wifi/wifiencap.cc
    elements/wifi/wifiencap.hh
    elements/wifi/wififragment.cc
    elements/wifi/wififragment.hh
    elements/wifi/wifiseq.cc
    elements/wifi/wifiseq.hh
    elements/wifi/wirelessinfo.cc
    elements/wifi/wirelessinfo.hh
    exopc/click.cc
    exopc/syscall.c
    lib/archive.cc
    lib/args.cc
    lib/atomic.cc
    lib/bighashmap_arena.cc
    lib/bitvector.cc
    lib/clp.c
    lib/confparse.cc
    lib/crc32.c
    lib/dpdkdevice.cc
    lib/driver.cc
    lib/element.cc
    lib/elemfilter.cc
    lib/error.cc
    lib/etheraddress.cc
    lib/exportstub.cc
    lib/fromfile.cc
    lib/gaprate.cc
    lib/glue.cc
    lib/handlercall.cc
    lib/hashallocator.cc
    lib/in_cksum.c
    lib/ino.cc
    lib/integers.cc
    lib/ip6address.cc
    lib/ip6flowid.cc
    lib/ip6table.cc
    lib/ipaddress.cc
    lib/ipflowid.cc
    lib/iptable.cc
    lib/lexer.cc
    lib/master.cc
    lib/md5.cc
    lib/nameinfo.cc
    lib/notifier.cc
    lib/packet.cc
    lib/router.cc
    lib/routerthread.cc
    lib/routervisitor.cc
    lib/selectset.cc
    lib/straccum.cc
    lib/strerror.c
    lib/string.cc
    lib/task.cc
    lib/timer.cc
    lib/timerset.cc
    lib/timestamp.cc
    lib/userutils.cc
    lib/variableenv.cc
    libsodium/libsodium-native/include/sodium/core.h
    libsodium/libsodium-native/include/sodium/crypto_aead_aes256gcm.h
    libsodium/libsodium-native/include/sodium/crypto_aead_chacha20poly1305.h
    libsodium/libsodium-native/include/sodium/crypto_auth.h
    libsodium/libsodium-native/include/sodium/crypto_auth_hmacsha256.h
    libsodium/libsodium-native/include/sodium/crypto_auth_hmacsha512.h
    libsodium/libsodium-native/include/sodium/crypto_auth_hmacsha512256.h
    libsodium/libsodium-native/include/sodium/crypto_box.h
    libsodium/libsodium-native/include/sodium/crypto_box_curve25519xsalsa20poly1305.h
    libsodium/libsodium-native/include/sodium/crypto_core_hchacha20.h
    libsodium/libsodium-native/include/sodium/crypto_core_hsalsa20.h
    libsodium/libsodium-native/include/sodium/crypto_core_salsa20.h
    libsodium/libsodium-native/include/sodium/crypto_core_salsa2012.h
    libsodium/libsodium-native/include/sodium/crypto_core_salsa208.h
    libsodium/libsodium-native/include/sodium/crypto_generichash.h
    libsodium/libsodium-native/include/sodium/crypto_generichash_blake2b.h
    libsodium/libsodium-native/include/sodium/crypto_hash.h
    libsodium/libsodium-native/include/sodium/crypto_hash_sha256.h
    libsodium/libsodium-native/include/sodium/crypto_hash_sha512.h
    libsodium/libsodium-native/include/sodium/crypto_onetimeauth.h
    libsodium/libsodium-native/include/sodium/crypto_onetimeauth_poly1305.h
    libsodium/libsodium-native/include/sodium/crypto_pwhash.h
    libsodium/libsodium-native/include/sodium/crypto_pwhash_argon2i.h
    libsodium/libsodium-native/include/sodium/crypto_pwhash_scryptsalsa208sha256.h
    libsodium/libsodium-native/include/sodium/crypto_scalarmult.h
    libsodium/libsodium-native/include/sodium/crypto_scalarmult_curve25519.h
    libsodium/libsodium-native/include/sodium/crypto_secretbox.h
    libsodium/libsodium-native/include/sodium/crypto_secretbox_xsalsa20poly1305.h
    libsodium/libsodium-native/include/sodium/crypto_shorthash.h
    libsodium/libsodium-native/include/sodium/crypto_shorthash_siphash24.h
    libsodium/libsodium-native/include/sodium/crypto_sign.h
    libsodium/libsodium-native/include/sodium/crypto_sign_ed25519.h
    libsodium/libsodium-native/include/sodium/crypto_sign_edwards25519sha512batch.h
    libsodium/libsodium-native/include/sodium/crypto_stream.h
    libsodium/libsodium-native/include/sodium/crypto_stream_aes128ctr.h
    libsodium/libsodium-native/include/sodium/crypto_stream_chacha20.h
    libsodium/libsodium-native/include/sodium/crypto_stream_salsa20.h
    libsodium/libsodium-native/include/sodium/crypto_stream_salsa2012.h
    libsodium/libsodium-native/include/sodium/crypto_stream_salsa208.h
    libsodium/libsodium-native/include/sodium/crypto_stream_xsalsa20.h
    libsodium/libsodium-native/include/sodium/crypto_verify_16.h
    libsodium/libsodium-native/include/sodium/crypto_verify_32.h
    libsodium/libsodium-native/include/sodium/crypto_verify_64.h
    libsodium/libsodium-native/include/sodium/export.h
    libsodium/libsodium-native/include/sodium/randombytes.h
    libsodium/libsodium-native/include/sodium/randombytes_salsa20_random.h
    libsodium/libsodium-native/include/sodium/randombytes_sysrandom.h
    libsodium/libsodium-native/include/sodium/runtime.h
    libsodium/libsodium-native/include/sodium/utils.h
    libsodium/libsodium-native/include/sodium/version.h
    libsodium/libsodium-native/include/sodium.h
    userlevel/click.cc
    userlevel/elements.cc)

include_directories(include)
include_directories(libsodium/libsodium-native/include)

add_executable(click_castor ${SOURCE_FILES})